@@ -98,6 +98,20 @@ alert slack.message "slack" {
 }
 
 # ---------------------------------------------------------------------------------------------------------------------
+# SMTP plugin
+# ---------------------------------------------------------------------------------------------------------------------
+
+# Sends alerts as a mail message over SMTP.
+alert smtp.send "smtp" {
+  server = "mail.example.com:25"
+  username = "goplum"
+  password = "example"
+  subject_prefix = "ALERT: "                # optional
+  from = "alerts@example.com"
+  to = "sysadmin@example.com"
+}
+
+# ---------------------------------------------------------------------------------------------------------------------
 # Twilio plugin
 # ---------------------------------------------------------------------------------------------------------------------
 
